--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#404040</color>
+    <color name="colorPrimaryDark">#404040</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="sim_one_background">#00FFFF</color>
+    <color name="sim_two_background">#99FF99</color>
+    <color name="white_color">#f2f2f2</color>
+    <color name="black_color">#404040</color>
 </resources>
